--- a/Website/generator.html
+++ b/Website/generator.html
@@ -77,17 +77,17 @@
 
 <script type="text/javascript">
 	function addPlayer() {
-		var broj = $("#generatorTable").children().length;
+		var broj = $("#generatorTable tbody").children().length;
 		$('#generatorTable tr:last').after('<tr>\
-											<td class="data_left col-xs-2">Ime:</td>\
-						  					<td class="data_right col-xs-4">\
-						  						<input type="text" class="form-control" name="ime_' + broj + '" placeholder="Unesite ime">\
-						  					</td>\
-						  					<td class="data_left col-xs-2">Email:</td>\
-						  					<td class="data_right col-xs-4">\
-						  						<input type="text" class="form-control" name="email_' + broj + '" placeholder="Unesite email">\
-						  					</td> \
-					  					</tr>');
+							<td class="data_left col-xs-2">Ime:</td>\
+							<td class="data_right col-xs-4">\
+								<input type="text" class="form-control" name="ime_' + broj + '" placeholder="Unesite ime">\
+							</td>\
+							<td class="data_left col-xs-2">Email:</td>\
+							<td class="data_right col-xs-4">\
+								<input type="text" class="form-control" name="email_' + broj + '" placeholder="Unesite email">\
+							</td> \
+						   </tr>');
 	}
 </script>
 
